solve some name errors and mailto

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="row text-center">
-  <h2 class="description">A documentary by <br>Julia Martinez Heiman & Konstantina Bousmpoura</h2>
+  <h2 class="description">A documentary by <br>Julia Martinez Heimann & Konstantina Bousmpoura</h2>
 </div>
 
 <div class="synopsis">
@@ -159,7 +159,7 @@
           <dd class="credit-item">Argentina</dd>
           <dd class="credit-item">Greece</dd>
           <dt class="credit-title">Written & Directed by:</dt>
-          <dd class="credit-item">Julia Martinez Heiman</dd>
+          <dd class="credit-item">Julia Martinez Heimann</dd>
           <dd class="credit-item">Konstantina Bousmpoura</dd>
           <dt class="credit-title">Director of photography</dt>
           <dd class="credit-item">Pigu Gómez (ADF)</dd>
@@ -184,7 +184,7 @@
         <dd class="credit-item">Nancy Kokolaki</dd>
         <dd class="credit-item">Nikos Moustakas</dd>
         <dt class="credit-title">Producers</dt>
-        <dd class="credit-item">Julia Martínez Heiman</dd>
+        <dd class="credit-item">Julia Martínez Heimann</dd>
         <dd class="credit-item">Konstantina Bousmpoura</dd>
       </div>
     </dl>
@@ -206,9 +206,9 @@
     <ul class="vertical menu oswald-large">
       <li><i class="fi-social-facebook icon"></i><a class="white" target="_blank" href="https://www.facebook.com/workingdancers/">facebook.com/workingdancers</a></li>
       <li><i class="fi-web icon"></i><a class="white" target="_blank" href="http://www.badcrowd.eu">www.badcrowd.eu</a></li>
-      <li><i class="fi-mail icon"></i><a class="white" href="mailto=badcrowd@outlook.com">badcrowd@outlook.com</a></li>
-      <li><i class="fi-mail icon"></i><a class="white" href="mailto=konstantinab@gmail.com">Konstantina Bousmpoura</a></li>
-      <li><i class="fi-mail icon"></i><a class="white" href="mailto=julheim@gmail.com">Julia Martínez Heiman</a></li>
+      <li><i class="fi-mail icon"></i><a class="white" href="mailto:badcrowd@outlook.com">badcrowd@outlook.com</a></li>
+      <li><i class="fi-mail icon"></i><a class="white" href="mailto:konstantinab@gmail.com">Konstantina Bousmpoura: konstantinab@gmail.com</a></li>
+      <li><i class="fi-mail icon"></i><a class="white" href="mailto:julheim@gmail.com">Julia Martínez Heimann: julheim@gmail.com</a></li>
     </ul>
   </div>
 </div>
